kubernetes.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
    name: qe
    annotations:
        traefik.ingress.kubernetes.io/router.tls: "true"
        traefik.ingress.kubernetes.io/router.entrypoints: websecure

spec:
    ingressClassName: traefik
    rules:
      - host: qe.valdum.dev
        http:
            paths:
              - path: /
                pathType: Prefix
                backend:
                    service:
                        name: qe
                        port:
                            name: http-out

---
apiVersion: v1
kind: Service

metadata:
    name: qe

spec:
    type: ClusterIP
    selector:
        app: qe
    sessionAffinity: None
    ports:
      - name: http-out
        protocol: TCP
        port: 80
        targetPort: http-in

---
apiVersion: apps/v1
kind: Deployment

metadata:
    name: qe

spec:
    replicas: 1
    minReadySeconds: 15
    revisionHistoryLimit: 1

    strategy:
        rollingUpdate:
            maxSurge: 1
            maxUnavailable: 0

    selector:
        matchLabels:
            app: qe

    template:
        metadata:
            labels:
                app: qe

        spec:
            containers:
              - name: qe
                image: ghcr.io/v4ldum/qe:latest
                imagePullPolicy: Always

                ports:
                  - name: http-in
                    containerPort: 8080

                startupProbe:
                    periodSeconds: 1
                    failureThreshold: 10
                    httpGet:
                        path: /
                        port: http-in
                readinessProbe:
                    timeoutSeconds: 3
                    httpGet:
                        path: /
                        port: http-in
